--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
   <title>Votacion Parcial</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,93 +32,100 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1 class="text-center">Elecciones 2022</h1>
-        <h2 class="text-center">Candidatos</h2>
+        <h1 class="text-center mainTitle">Elecciones 2022</h1>
+        <h2 class="text-center my-3">Candidatos</h2>
       </div>
     </div>
   </div>
+
   <div class="container">
-    <div class="row">
-      <div class="col" >
-        <div class="card-deck">
-          <div class="card text-center ">
-            <img class="card-img-top w-35 mx-auto" src="businessman.png" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Candidato 1</h5>
-                <p class="card-text">
-                <ul class="list-group">
-                  <li class="list-group-item">
-                    <h4>Nombre: Pepito Pascuas</h4>
+    <div class="row row-cols-1 row-cols-lg-2 g-4">
+      <div class="col">
+        <div class=" card h-100 mx-5 text-center candidateCard" id="c1">
+          <img class="card-img-top w-25 mx-auto my-2" src="businessman.png" alt="Card image cap">
+          <div class="card-body">
+            <h1 class="card-title">Candidato 1</h1>
+            <p class="card-text">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h5>Nombre: Pepito Pascuas</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Edad: 50</h4>
+              </li>
+              <li class="list-group-item">
+                <h5>Edad: 50</h5>
+              </li>
+              <li class="list-group-item">
+                <h5>Partido: Podemos</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Partido: Podemos</h4>
+              </li>
+              <li class="list-group-item">
+                <h5>Votos Obtenidos: </h5>
+                <h5 id="votosC1">0</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Votos Obtenidos: </h4>
-                    <h3 id="votosC1">0</h3>
+              </li>
+              <li class="list-group-item">
+                <h5>Porcentaje de Votos: </h5>
+                <h5 id="porcentajeC1">0%</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Porcentaje de Votos: </h4>
-                    <h3 id="porcentajeC1"></h3>
-
-                  </li>
-                </ul>
-                </p>
-                <a class="btn btn-primary" data-toggle="modal" data-target="#voteModalC1">Votar</a>
-            </div>
+              </li>
+            </ul>
+            </p>
+            <a class="btn voteBtn stretched-link " id="c1Btn" data-bs-toggle="modal"
+              data-bs-target="#voteModalC1">Votar</a>
           </div>
+        </div>
+      </div>
 
 
+      <div class="col">
+        <div class=" card h-100 mx-5 text-center candidateCard" id="c2">
+          <img class="card-img-top  w-25 mx-auto my-2" src="businesswoman.png" alt="Card image cap">
+          <div class="card-body">
+            <h1 class="card-title">Candidato 2</h1>
+            <p class="card-text">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h5>Nombre: Pepita Perez</h5>
 
-          <div class="card text-center">
-            <img class="card-img-top w-35 mx-auto" src="businesswoman.png" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Candidato 2</h5>
-                <p class="card-text">
-                <ul class="list-group">
-                  <li class="list-group-item">
-                    <h4>Nombre: Pepita Perez</h4>
+              </li>
+              <li class="list-group-item">
+                <h5>Edad: 45</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Edad: 45</h4>
+              </li>
+              <li class="list-group-item">
+                <h5>Partido: Unidos</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Partido: Unidos</h4>
+              </li>
+              <li class="list-group-item">
+                <h5>Votos Obtenidos: </h5>
+                <h5 id="votosC2">0</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Votos Obtenidos: </h4>
-                    <h3 id="votosC2">0</h3>
+              </li>
+              <li class="list-group-item">
+                <h5>Porcentaje de Votos:</h5>
+                <h5 id="porcentajeC2">0%</h5>
 
-                  </li>
-                  <li class="list-group-item">
-                    <h4>Porcentaje de Votos:</h4>
-                    <h3 id="porcentajeC2"></h3>
-
-                  </li>
-                </ul>
-                </p>
-                <a class="btn btn-primary" data-toggle="modal" data-target="#voteModalC2">Votar</a>
-            </div>
+              </li>
+            </ul>
+            </p>
+            <a class="btn voteBtn stretched-link " id="c2Btn" data-bs-toggle="modal"
+              data-bs-target="#voteModalC2">Votar</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-lg-12 text-center">
-        <a class="btn btn-primary" data-toggle="modal" data-target="#statModal" onclick="stats()">Estadisticas</a>
-      </div>
+  </div>
+
+  <div class="row justify-content-lg-center pt-3 ">
+    <div class="col-lg-4 text-center p-1">
+      <a class="btn statBtn p-3 " data-bs-toggle="modal" data-bs-target="#statModal" onclick="stats()">Estadisticas</a>
+    </div>
+    <div class="col-lg-4 text-center p-1">
+      <a class="btn clearBtn p-3 "onclick="window.location.reload();">Limpiar Urnas</a>
     </div>
   </div>
+  
+
 
 
 
@@ -121,7 +135,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title text-center" id="voteModalLabelC2">Votar Por Candidato 2</h3>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -137,7 +151,7 @@
             <label for="edadC2">Rango de Edad</label>
             <select class="form-control" id="edadC2">
               <option>18-34</option>
-              <option>35-55</option>
+              <option>35-54</option>
               <option>55 o Mas</option>
             </select>
           </div>
@@ -151,8 +165,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" onclick="countC2()" data-dismiss="modal">Votar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" onclick="countC2()" data-bs-dismiss="modal">Votar</button>
         </div>
       </div>
     </div>
@@ -165,7 +179,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title text-center" id="voteModalLabelC1">Votar Por Candidato 1</h3>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -181,7 +195,7 @@
             <label for="edadC1">Rango de Edad</label>
             <select class="form-control" id="edadC1">
               <option>18-34</option>
-              <option>35-55</option>
+              <option>35-54</option>
               <option>55 o Mas</option>
             </select>
           </div>
@@ -195,8 +209,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" onclick="countC1()" data-dismiss="modal">Votar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" onclick="countC1()" data-bs-dismiss="modal">Votar</button>
         </div>
       </div>
     </div>
@@ -208,15 +222,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title text-center" id="statModalLabe">Estadisticas</h3>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <div class="card-deck">
+          <div class="card-group">
             <div class="card text-center">
               <div class="card-body">
-                <h5 class="card-title">Candidato 1</h5>
+                <h3 class="card-title">Candidato 1</h3>
                 <ul class="list-group">
                   <li class="list-group-item" id="vH1">Votos Hombres</li>
                   <li class="list-group-item" id="vM1">Votos Mujeres</li>
@@ -231,7 +245,7 @@
             </div>
             <div class="card text-center">
               <div class="card-body">
-                <h5 class="card-title">Candidato 2</h5>
+                <h3 class="card-title">Candidato 2</h3>
                 <ul class="list-group">
                   <li class="list-group-item" id="vH2">Votos Hombres</li>
                   <li class="list-group-item" id="vM2">Votos Mujeres</li>
@@ -245,12 +259,12 @@
               </div>
             </div>
           </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
 </body>
 
